Trying to fix the bottom on iPhones

--- a/base.css
+++ b/base.css
@@ -90,6 +90,7 @@ article {
     background: rgb(252, 252, 252);
     text-align: center;
     padding-top: 12px;
+    padding-bottom: env(safe-area-inset-bottom);
     border-top: 1px solid #ececec;
 }
 
